Test the application can show the number of syns used today by a particular user (main use case)

--- a/Syns.Tests/Syns.Tests.csproj
+++ b/Syns.Tests/Syns.Tests.csproj
@@ -49,9 +49,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TodaySynsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Syns\Syns.csproj">
+      <Project>{A57BDA04-8AAC-4074-8548-402E822B4358}</Project>
+      <Name>Syns</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
