--- a/Syns.Tests/Syns.Tests.csproj
+++ b/Syns.Tests/Syns.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationLoginTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TodaySynsTests.cs" />
   </ItemGroup>
