--- a/Syns/Syns.csproj
+++ b/Syns/Syns.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="AuthenticationException.cs" />
     <Compile Include="IAuthentication.cs" />
     <Compile Include="ISynsStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
