--- a/Syns/Syns.csproj
+++ b/Syns/Syns.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IAuthentication.cs" />
     <Compile Include="ISynsStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Requirements.txt" />
