--- a/Syns.Tests/Syns.Tests.csproj
+++ b/Syns.Tests/Syns.Tests.csproj
@@ -48,13 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationLoginTests.cs" />
-    <Compile Include="InMemoryContractsTests\InMemoryAuthenticationTests.cs" />
+    <Compile Include="InMemoryContractsTests\InMemoryUserTests.cs" />
     <Compile Include="InMemoryContractsTests\InMemorySynsStoreTests.cs" />
     <Compile Include="InMemoryContracts\InMemorySynsStore.cs" />
     <Compile Include="ContractsTests\ISynsStoreContractTests.cs" />
-    <Compile Include="ContractsTests\IAuthenticationContractTests.cs" />
-    <Compile Include="InMemoryContracts\InMemoryAuthentication.cs" />
+    <Compile Include="ContractsTests\IUserContractTests.cs" />
+    <Compile Include="InMemoryContracts\InMemoryUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApplicationTodaySynsTests.cs" />
   </ItemGroup>
