--- a/Syns/Syns.csproj
+++ b/Syns/Syns.csproj
@@ -42,8 +42,8 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="UserServiceException.cs" />
-    <Compile Include="IUserService.cs" />
-    <Compile Include="ISynsStore.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Interfaces\ISynsStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
